@@ -13,6 +13,7 @@ data class GutenbergPropsBuilder(
     private val enableXPosts: Boolean,
     private val enableUnsupportedBlockEditor: Boolean,
     private val unsupportedBlockEditorSwitch: Boolean,
+    private val enableAudioBlock: Boolean,
     private val enablePreviewMode: Boolean,
     private val localeSlug: String,
     private val postType: String,
@@ -25,6 +26,7 @@ data class GutenbergPropsBuilder(
             enableXPosts = enableXPosts,
             enableUnsupportedBlockEditor = enableUnsupportedBlockEditor,
             canEnableUnsupportedBlockEditor = unsupportedBlockEditorSwitch,
+            enableAudioBlock = enableAudioBlock,
             localeSlug = localeSlug,
             postType = postType,
             editorTheme = editorTheme,
